# convert-case

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile  notes.md  rust-toolchain.toml
ccase/: Cargo.toml  README.md
ccase/old_src/: conversion.rs  file.rs  list.rs  main.rs
ccase/src/: app.rs  file.rs  lib.rs  list.rs  main.rs
src/: boundary.rs  case.rs  converter.rs  encased.rs  lib.rs  main.rs  pattern.rs  segmentation.rs  words.rs
tests/: ccase.rs  encased.rs  macros.rs  string_types.rs
