[package]
name = "convert_case"
version = "0.8.0"
authors = ["rutrum <dave@rutrum.net>"]
edition = "2021"
description = "Convert strings into any case"
license = "MIT"
keywords = [ "case", "string", "casing" ]
categories = [ "text-processing", "no-std" ]
readme = "README.md"
repository = "https://github.com/rutrum/convert-case"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[features]
random = ["rand"]

[dependencies]
unicode-segmentation = "1.9.0"
rand = { version = "^0.8", optional = true }
ascii = { version = "^1.1.0"}
