[package]
name = "ccase"
version = "0.3.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"
description = "Command line interface to convert strings into any case"
license = "MIT"
keywords = [ "casing", "case", "string" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/rutrum/convert-case/tree/master/ccase"
documentation = "https://github.com/rutrum/convert-case/tree/master/ccase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ccase_lib"
path = "src/lib.rs"

[[bin]]
name = "ccase"
path = "src/main.rs"

[dependencies]
convert_case = { version = "^0.5", path = "../", features = ["random"] }
clap = { version = "3.0.14", features = ["cargo"] }
atty = "0.2.14"

[dev-dependencies]
assert_cli = "^0.6"
strum = "0.18.0"
strum_macros = "0.18.0"
