[package]
name = "ccase"
version = "0.3.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"
description = "Command line interface to convert strings into any case"
license = "MIT"
keywords = [ "casing", "case", "string" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/rutrum/convert-case/tree/master/ccase"
documentation = "https://github.com/rutrum/convert-case/tree/master/ccase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ccase"
path = "src/main.rs"

[dependencies]
convert_case = { version = "^0.5", path = "../", features = ["random"] }
clap = { version = "^3.2", features = ["cargo", "color"] }
atty = "0.2.14"

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0.4"
strum = "0.18.0"
strum_macros = "0.18.0"
